2012-05-18  Hugo Parente Lima  <hugo.lima@openbossa.org>

        [Qt][WK2] fast/events/page-visibility-iframe-move-test.html fails
        https://bugs.webkit.org/show_bug.cgi?id=86731

        Reviewed by Simon Hausmann.

        Set the page visibility on a single page instead of on all pages
        from the page group.

        * WebProcess/InjectedBundle/API/c/WKBundle.cpp:
        (WKBundleSetPageVisibilityState):
        * WebProcess/InjectedBundle/API/c/WKBundlePrivate.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::setPageVisibilityState):
        * WebProcess/InjectedBundle/InjectedBundle.h:
        (InjectedBundle):

2012-05-18  MORITA Hajime  <morrita@google.com>

        Yet another unreviewed build fix on r117572, this time for wk2...

        * WebProcess/WebCoreSupport/WebEditorClient.h:

2012-05-17  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, WebKit2 GTK/Qt build fix attempt after r117516.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didBlockInsecurePluginVersion):

2012-05-17  Anders Carlsson  <andersca@apple.com>

        Plug-ins blacklist mechanism can tell clients about plug-in with null identifier
        https://bugs.webkit.org/show_bug.cgi?id=86788
        <rdar://problem/11479503>

        Reviewed by John Sullivan.

        Pass along the URL string of the blocked plug-in so we can find the plug-in even if there was no
        MIME type specified in the <embed> or <object> tag.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didBlockInsecurePluginVersion):
        * UIProcess/WebPageProxy.h:
        (WebPageProxy):
        * UIProcess/WebPageProxy.messages.in:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::createPlugin):

2012-05-17  Oliver Hunt  <oliver@apple.com>

        Endeavour to make the windows test bot actually able to run tests.
        https://bugs.webkit.org/show_bug.cgi?id=86772
